--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <ul class="navbar-nav ml-auto">
               <li class="nav-item"><a class="nav-link link-scroll active" href="#hero">Home <span class="sr-only">(current)</span></a></li>
               <li class="nav-item"><a class="nav-link link-scroll" href="#about">About</a></li>
-              <li class="nav-item"><a class="nav-link link-scroll" href="#expertise">Expertise</a></li>
+              <li class="nav-item"><a class="nav-link link-scroll" href="#expertise">Skills</a></li>
               <li class="nav-item"><a class="nav-link link-scroll" href="#education">Education</a></li>
               <li class="nav-item"><a class="nav-link link-scroll" href="#portfolio">Portfolio</a></li>
               <li class="nav-item"><a class="nav-link link-scroll" href="#contact">Contact</a></li>
@@ -72,7 +72,7 @@
       <div class="container">
         <header class="mb-5 pb-4">
           <p class="font-weight-bold text-uppercase letter-spacing-3 colors">Authentic Art.</p>
-          <h2 class="text-uppercase lined">Expertise</h2>
+          <h2 class="text-uppercase lined">Skills</h2>
         </header>
         <div class="row">
           <div class="col-md-6 mb-5">
