--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="col-md-8 text-white">
             <h2 class="h4 font-weight-normal mb-1 colors">Hello, I am</h2>
             <h1 class="text-uppercase text-xl mb-1">Rahul <span class="" style="color: #e6e8fa;">Thakkar</span></h1>
-            <h2 class="h4 font-weight-normal mb-5">Front-End Web Developer</h2>
+            <h2 class="h4 font-weight-normal mb-5">Front-End Developer</h2>
             <p class="text-uppercase text-shadow">" If somebody offers you an amazing opportunity but you are not sure you can do it, say yes – then learn how to do it later! " - <span class="font-weight-bold">Richard Branson</span></p>
           </div>
         </div>
